Remove Java 8 support from our shell scripts
Signed-off-by: Jakub Scholz <www@scholzj.com>