@@ -8,13 +8,7 @@ shift
 # expand gc options based upon java version
 function get_gc_opts {
   if [ "${STRIMZI_GC_LOG_ENABLED}" == "true" ]; then
-    # The first segment of the version number is '1' for releases < 9; then '9', '10', '11', ...
-    JAVA_MAJOR_VERSION=$(java -version 2>&1 | sed -E -n 's/.* version "([0-9]*).*$/\1/p')
-    if [ "$JAVA_MAJOR_VERSION" -ge "9" ] ; then
-      echo "-Xlog:gc*:stdout:time -XX:NativeMemoryTracking=summary"
-    else
-      echo "-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:NativeMemoryTracking=summary"
-    fi
+    echo "-Xlog:gc*:stdout:time -XX:NativeMemoryTracking=summary"
   else
     # no gc options
     echo ""
@@ -35,9 +29,6 @@ JAVA_OPTS="${JAVA_OPTS} -Dvertx.cacheDirBase=/tmp -Djava.security.egd=file:/dev/
 JAVA_OPTS="${JAVA_OPTS} $(get_gc_opts)"
 
 # Deny illegal access option is supported only on Java 9 and higher
-JAVA_MAJOR_VERSION=$(java -version 2>&1 | sed -E -n 's/.* version "([0-9]*).*$/\1/p')
-if [ "$JAVA_MAJOR_VERSION" -ge "9" ] ; then
-  JAVA_OPTS="${JAVA_OPTS} --illegal-access=deny"
-fi
+JAVA_OPTS="${JAVA_OPTS} --illegal-access=deny"
 
 exec java $JAVA_OPTS -jar $JAR $@
